<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.LicenceFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_string_licence"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_string_my_source"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_vertag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_string_project_thanks"
                android:textColor="#676767"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://github.com/yahch/aria2c-android-app"
                android:textColor="#676767"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_string_project_url"
                android:textColor="#676767"
                android:textIsSelectable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/app_string_what_module_used"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="aria2c"
                android:text="aria2c"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://github.com/aria2/aria2/blob/master/COPYING"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="aria-ng"
                android:text="aria-ng"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="https://github.com/mayswind/AriaNg/blob/master/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="appcompat-v7"
                android:text="appcompat-v7"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:tag="appcompat-v7"
                android:text="https://android.googlesource.com/platform/frameworks/support/+/refs/tags/android-9.0.0_r35/LICENSE.txt"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="eventbus"
                android:text="eventbus"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="eventbus"
                android:text="https://github.com/greenrobot/EventBus/blob/master/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="blankj:utilcode"
                android:text="blankj:utilcode"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="blankj:utilcode"
                android:text="https://github.com/Blankj/AndroidUtilCode/blob/master/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="android-async-http"
                android:text="android-async-http"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="android-async-http"
                android:text="https://github.com/loopj/android-async-http/blob/master/README.md"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="recyclerview"
                android:text="recyclerview"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="recyclerview"
                android:text="https://android.googlesource.com/platform/frameworks/support/+/refs/tags/android-9.0.0_r35/LICENSE.txt"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="guava"
                android:text="guava"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="guava"
                android:text="https://github.com/google/guava/blob/master/COPYING"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="support-v4"
                android:text="support-v4"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="support-v4"
                android:text="https://android.googlesource.com/platform/frameworks/support/+/refs/tags/android-9.0.0_r35/LICENSE.txt"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="com.android.support:design"
                android:text="com.android.support:design"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="com.android.support:design"
                android:text="https://android.googlesource.com/platform/frameworks/support/+/refs/tags/android-9.0.0_r35/LICENSE.txt"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="fragment-rigger"
                android:text="fragment-rigger"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="fragment-rigger"
                android:text="https://github.com/JingYeoh/FragmentRigger/blob/master/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="rxandroid"
                android:text="rxandroid"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="rxandroid"
                android:text="https://github.com/ReactiveX/RxAndroid/blob/2.x/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:tag="rxjava"
                android:text="rxjava"
                android:textColor="@color/colorPrimaryDark"
                android:textIsSelectable="true"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="rxjava"
                android:text="https://github.com/ReactiveX/RxJava/blob/2.x/LICENSE"
                android:textColor="#676767"
                android:textIsSelectable="true"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>